<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestButtons2</string>
    <string name="hello_world">Hello world!</string>
    <string name="placeholder">Default</string>
    <string name="menu_settings">Settings</string>
	<string name="button_start">Start</string>
	<string name="supereasy">Peter</string>
	<string name="easy">Easy</string>
	<string name="medium">Medium</string>
	<string name="hard">Hard</string>
	<string name="next">Next</string>
	<string name="time">Timer: </string>
	<string name="start">Start!</string>
	
	
	<string name="level1">Level 1</string>
	<string name="level2">Level 2</string>
	<string name="level3">Level 3</string>
	<string name="level4">Level 4</string>
	<string name="level5">Level 5</string>
	<string name="level6">Level 6</string>
	<string name="level7">Level 7</string>
	<string name="level8">Level 8</string>
	
	<string name="victorymessage1">You Solved this in</string>
	<string name="victorymessage2">Seconds!</string>
	<string name="home">Home</string>

	
</resources>