<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
	<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:orientation="vertical">
	     <LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content" 
	         android:orientation="horizontal">
	
	         <Button
	             android:id="@+id/button1"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="level1"
	             android:text="@string/level1" />
	
	         <Button
	             android:id="@+id/button2"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="level2"
	             android:text="@string/level2" />
	
	         <Button
	             android:id="@+id/button3"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="level3"
	             android:text="@string/level3" />
	
	         <Button
	             android:id="@+id/button4"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="level4"
	             android:text="@string/level4" />
	     	</LinearLayout>
	     		<LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content" 
	         android:orientation="horizontal">
	         	<Button
	             android:id="@+id/button5"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="level5"
	             android:text="@string/level5" />
	
	         <Button
	             android:id="@+id/button6"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="level6"
	             android:text="@string/level6" />
	
	         <Button
	             android:id="@+id/button7"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="level7"
	             android:text="@string/level7" />
	
	         <Button
	             android:id="@+id/button8"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="level8"
	             android:text="@string/level8" />
	     </LinearLayout>
	</LinearLayout>
	</LinearLayout>