<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
<!--    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal" >
    	
        <Button
        android:id="@+id/color1"
        android:layout_width="fill_parent"
    	android:layout_height="20dp"
    	android:gravity = "right"
    	android:layout_weight="1" />
        
       
                 
        
    </LinearLayout>
-->

	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
		<TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="20sp"
	            android:text="@string/time" />
	
        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#FF2020" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:text="@string/next" />

        <Button
            android:id="@+id/button1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="10sp"
            android:text="@string/placeholder" />
        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="10sp"
            android:text="@string/placeholder"  />
        <Button
            android:id="@+id/button3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="10sp"
            android:text="@string/placeholder"  />
        
        
    </LinearLayout>

    <TableLayout android:id="@+id/tableLayout1"
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:layout_margin="20dp"/>



</LinearLayout>
